#refs About US Header Alignment fix commit.

--- a/src/components/home/About/css/media-query/About-mq-650.css
+++ b/src/components/home/About/css/media-query/About-mq-650.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 650px) {
   .about-header h1 {
     font-size: 2.5rem;
+    text-align: center;
     margin-bottom: 0;
   }
   .about-article p {
@@ -9,6 +10,7 @@
     font-weight: 600;
     font-size: 1.4rem;
   }
+
   .about-article {
     width: 100%;
   }
